--- a/tutorials/spde/spde-tutorial.tex
+++ b/tutorials/spde/spde-tutorial.tex
@@ -23,10 +23,10 @@
 \newcommand{\bbv}{\mbox{\protect \boldmath $v$}}
 \newcommand{\bbx}{\mbox{\protect \boldmath $x$}}
 
-\title{\textbf{The R-INLA tutorial: SPDE models}\\
+\title{\textbf{The R-INLA tutorial on SPDE models}\\
 Warning: work in progress...\\
 Suggestions are welcome to \texttt{elias@r-inla.org}}
-\author{Elias T. Krainski and Finn Lindgren}
+\author{Elias T. Krainski, Finn Lindgren, Daniel Simpson and H{\aa}vard Rue}
 
 \begin{document}
 \maketitle
