--- a/tutorials/spde/updates.tex
+++ b/tutorials/spde/updates.tex
@@ -1,4 +1,7 @@
+\section{Updates}
 \begin{verbatim}
+2015 May 7: English review in Chapters 1 and 2 (thanks to HS) and 
+  space-time point process, space time lowering dimension and survival
 2014 March 15: log-Cox example: fix weights, add covariate example
 2013 December 21: 
  * fix several missprints
