--- a/tutorials/spde/spde-tutorial-prefsampl.Rnw
+++ b/tutorials/spde/spde-tutorial-prefsampl.Rnw
@@ -1,4 +1,4 @@
-\chapter{Point process: inference on the log-Cox process}\label{ch:lcox}
+\chapter{Point process: inference for the log-Cox process}\label{ch:lcox}
 
 \SweaveOpts{prefix.string=figs/prefsampl} 
 <<sett,echo=F,results=hide>>=
@@ -70,7 +70,7 @@ exp(beta0) * diff(range(win$x)) * diff(range(win$y))
 @ 
 Is also possible to use a functional, see Chapter~\ref{ch:lcoxcov}.
 
-On the estimation process we use the Matern 
+In the estimation process we use the Matern 
 covariance function with $\nu=1$. 
 So, here we just fix it on this value. 
 The other parameters are the variance and scale
@@ -95,14 +95,14 @@ The point pattern locations are
 The exponential of simulated values of the LGRF 
 are returned as the \texttt{Lambda} attribute of the object. 
 We extract the $\Lambda$ and see a summary of the 
-$log(\Lambda)$ bellow
+$log(\Lambda)$ below
 <<>>=
 Lam <- attr(lg.s, 'Lambda')
 summary(as.vector(rf.s <- log(Lam$v)))
 @ 
 
-On the Figure~\ref{fig:lgrfpp} we can see the 
-simulated LGRF over the grid and the point pattern simulated 
+We can see the simulated LGRF over the grid and the point pattern simulated 
+in Figure~\ref{fig:lgrfpp} produced with the following commands 
 <<lgrfpp,eval=F>>=
 par(mfrow=c(1,1))
 require(fields)
@@ -140,7 +140,7 @@ So, we use the \code{loc.domain} argument to build the mesh.
 An additional thing is that we ignore the second outer extension and 
 we use a small first outer extension. 
 This is because it is not necessary to have nodes out of the study region 
-when it recieves zero weights (see weight computation bellow). 
+when it recieves zero weights (see weight computation below). 
 <<mesh>>=
 loc.d <- 3*t(matrix(c(0,0,1,0,1,1,0,1,0,0), 2))
 (nv <- (mesh <- inla.mesh.2d(loc.d=loc.d, off=.2, max.e=.5, cut=.1))$n) 
@@ -388,8 +388,8 @@ The point pattern locations are
 (n.c <- nrow(xy.c <- cbind(lg.s.c$x, lg.s.c$y)[,2:1]))
 @ 
 
-On the Figure~\ref{fig:lgrfppc} we can see the covariate values and 
-the simulated LGRF over the grid 
+We can see the covariate values and the simulated LGRF over the grid 
+in Figure~\ref{fig:lgrfppc} with the following commands
 <<lgrfppc,eval=FALSE>>=
 require(fields)
 par(mfrow=c(1,2), mar=c(2,2,1,1), mgp=c(1,0.5,0))
@@ -416,7 +416,7 @@ We have to include the covariate values to do the inference.
 We need to collect it at the point pattern locations and at the 
 mesh nodes from the grid. 
 
-We collect the covariate with the command bellow
+We collect the covariate with the command below
 <<collcovar>>=
 covariate = gridcov[Reduce('cbind', nearest.pixel(
     c(mesh$loc[,1], xy.c[,1]), c(mesh$loc[,2], xy.c[,2]), 
@@ -546,10 +546,6 @@ stk.u <- inla.stack(data=list(y=resp), A=list(lmat, 1),
 u.res <- inla(y ~ 0 + b0 + f(i, model=spde), 
               data=inla.stack.data(stk.u), 
               control.predictor=list(A=inla.stack.A(stk.u)))
-@ 
-
-Summaries
-<<summaries>>=
 round(cbind(True=c(beta0y=beta0.y, prec.y=prec.y), 
             rbind(u.res$summary.fix[, 1:6], u.res$summary.hy[1,])), 4)
 @ 
@@ -560,24 +556,22 @@ user-scale paramenters: scale, nominal variance and nominal range
 u.rf <- inla.spde2.result(u.res, 'i', spde)
 @ 
 
-In the Figure~\ref{fig:upost} we see the marginals 
-posterior distributions for the model parameters 
-with code bellow
+We can see the marginals posterior distributions 
+for the model parameters in the Figure~\ref{fig:upost}, 
+produced with the following code
 <<insp-u,eval=F>>=
 par(mfrow=c(1,3), mar=c(3, 3, 0.3, 0.3), mgp=c(2,1,0))
-plot(u.rf$marginals.variance.nominal[[1]], type='l', 
-     xlab=expression(sigma^2), ylab='Density')
-abline(v=sigma2x, col=2)
-plot(u.rf$marginals.kappa[[1]], type='l', 
-     xlab=expression(kappa), ylab='Density')
-abline(v=kappa, col=2)
+plot(u.rf$marginals.variance.nominal[[1]], type='l', ylab='Density',
+     xlab=expression(sigma^2)); abline(v=sigma2x, col=2)
+plot(u.rf$marginals.kappa[[1]], type='l', ylab='Density', 
+     xlab=expression(kappa)); abline(v=kappa, col=2)
 plot(u.rf$marginals.range.nominal[[1]], type='l', 
      xlab='Nominal range', ylab='Density')
 abline(v=sqrt(8*1)/kappa, col=2)
 @ 
 \setkeys{Gin}{width=0.99\textwidth}
 \begin{figure}\centering
-<<echo=F,results=hide,fig=TRUE,eps=FALSE,width=6,height=2.5>>=
+<<echo=F,results=hide,fig=TRUE,eps=FALSE,width=6,height=2.1>>=
 <<insp-u>>
 @ 
 \caption{Posterior distribution for $\sigma^2$, 
@@ -585,7 +579,7 @@ abline(v=sqrt(8*1)/kappa, col=2)
 \label{fig:upost}
 \end{figure}
 
-\section{Estimation under preferential sampling}
+\section{Model fitting under preferential sampling}
 
 In this situation we fit the model where a LGRF is 
 considered to model both point pattern and the response. 
@@ -618,9 +612,6 @@ stk2.y <- inla.stack(data=list(y=cbind(resp,NA), e=rep(0,n)),
 stk2.pp <- inla.stack(data=list(y=cbind(NA,y.pp), e=e.pp), 
                       A=list(A.pp, 1), tag='pp2',
                       effects=list(j=1:nv, b0.pp=rep(1,nv+n))) 
-@ 
-and join both together
-<<j.stk>>=
 j.stk <- inla.stack(stk2.y, stk2.pp)
 @ 
 
@@ -628,29 +619,29 @@ Now, we fit the geostatistical model under preferential sampling.
 To put the LGRF on both likelihood, we have to use the copy 
 strategy. 
 <<j-res>>=
-j.res <- inla(y ~ 0 + b0.pp + b0.y + f(i, model=spde) + 
-              f(j, copy='i', fixed=FALSE), 
-              data=inla.stack.data(j.stk), 
-              family=c('gaussian', 'poisson'), 
-              control.predictor=list(A=inla.stack.A(j.stk)), 
-              E=inla.stack.data(j.stk)$e)
-round(cbind(True=c(beta0, beta0.y), j.res$summary.fix), 4)
+jform <- y ~ 0 + b0.pp + b0.y + 
+    f(i, model=spde) + f(j, copy='i', fixed=FALSE)
+j.res <- inla(jform, family=c('gaussian', 'poisson'), 
+              data=inla.stack.data(j.stk), E=inla.stack.data(j.stk)$e,              
+              control.predictor=list(A=inla.stack.A(j.stk)))
+round(cbind(True=c(beta0, beta0.y), 
+            j.res$summary.fix), 4)
 @ 
 
 Computing the marginals posterior distributions 
-on the user-scale random field parameters 
+in user-scale random field parameters:
 <<psrf>>=
 j.rf <- inla.spde2.result(j.res, 'i', spde)
 @ 
-
-We can visualize the posterior distribution on the Figure~\ref{fig:jpars}. 
+We can visualize these posterior marginal distributions 
+in Figure~\ref{fig:jpars}. 
 The negative signal to the copy parameter $\beta$ is due to the 
 fact that we define the response with opposite signal of the 
 latent field used to do the simulation of the point process. 
 
 \setkeys{Gin}{width=0.7\textwidth}
 \begin{figure}\centering
-<<pppost,echo=F,results=hide,fig=TRUE,eps=FALSE,width=5.5,height=5.5>>=
+<<pppost,echo=F,results=hide,fig=TRUE,eps=FALSE,width=5.5,height=4>>=
 par(mfrow=c(2,2), mar=c(3,3,0.5,0.5), mgp=c(2,1,0))
 plot(j.res$marginals.hy[[length(j.res$marginals.hy)]], type='l', 
      xlab=expression(beta), ylab='Density', col=4)
@@ -678,7 +669,7 @@ abline(v=sqrt(8*1)/kappa, col=2, lty=2)
 legend('topright', c('True value', 'Usual model', 'Pref_Sampl'), 
        col=c(2,3,4), lty=1, bty='n')
 @ 
-\caption{Posterior distribution for $\beta_0$, $\sigma^2$, 
+\caption{Posterior marginal distribution for $\beta_0$, $\sigma^2$, 
   $\kappa$ and the nominal range under preferential sampling.}
 \label{fig:jpars}
 \end{figure}
