--- a/tutorials/spde/spde-tutorial-spacetime.Rnw
+++ b/tutorials/spde/spde-tutorial-spacetime.Rnw
@@ -313,7 +313,7 @@ do.call(function(...) grid.arrange(..., nrow=4),
 @ 
 \setkeys{Gin}{width=0.99\textwidth}
 \begin{figure}\centering
-<<vstrf,echo=F,fig=TRUE,eps=FALSE,width=10,height=10>>=
+<<vstrf,echo=F,fig=TRUE,eps=FALSE,width=10,height=8.7>>=
 <<strf>>
 @ 
 \caption{Visualization of the posterior mean of the 
@@ -330,10 +330,8 @@ don't used in the simulation.
 This part of the simulated data are used as a evaluation data. 
 
 <<stkv>>=
-vdat <- data.frame(y=as.vector(y), w=ccov, 
-                   time=rep(1:k, each=n), 
-                   xcoo=rep(coords[,1], k), 
-                   ycoo=rep(coords[,2], k))[-isel, ] 
+vdat <- data.frame(y=as.vector(y), w=ccov, time=rep(1:k, each=n), 
+            xcoo=rep(coords[,1], k), ycoo=rep(coords[,2], k))[-isel, ] 
 Aval <- inla.spde.make.A(prmesh1, loc=cbind(vdat$xcoo, vdat$ycoo), 
                          group=vdat$time) 
 stval <- inla.stack(tag='stval', data=list(y=NA), 
@@ -362,8 +360,9 @@ plot(vres$summary.fitted.values$mean[ival], vdat$y,
      asp=1, xlab='Posterior mean', ylab='Observed') 
 abline(0:1, col=gray(.7)) 
 @ 
+\setkeys{Gin}{width=0.55\textwidth}
 \begin{figure}\centering
-<<vstval,echo=FALSE,fig=TRUE,eps=FALSE,width=5.5,height=5.5>>=
+<<vstval,echo=FALSE,fig=TRUE,eps=FALSE,width=5,height=5>>=
 <<stvalplot>>
 @
 \caption{Validation: Observed versus posterior mean.}
